--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		
 		<title>douhua</title>
-		<link rel="stylesheet" type="text/css" href="/douhuawang/prd/styles/usage/app.css"/>
+		<link rel="stylesheet" type="text/css" href="/douhuawang/prd/styles/usage/app@c9b0eaad38aaa6dffb5431f6bf5f0f43.css"/>
 	</head>
 	<body>
-		<script src="/douhuawang/prd/scripts/app.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/douhuawang/prd/scripts/app@858da0ae1d852be9c3bb60c05f1095e7.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
